--- a/Public/Contact.html
+++ b/Public/Contact.html
@@ -8,7 +8,7 @@
     <body>
          <h1>Mis datos de contacto!</h1>
           <ul>
-             <li>Telefono: +54 9 11 2763-8841</li>
+             <li>Telefono: 5491127638841</li>
              <li>Email: sebitax111@gmail.com</li>
              <li>Domicilio: Atalco 4977</li>
              <li><a href="https://www.facebook.com/Sebitaxahre/">Facebook</a></li>
